2013-10-10  Joseph Myers  <joseph@codesourcery.com>

	* soft-fp/soft-fp.h (FP_INIT_EXCEPTIONS): New macro.
	* soft-fp/extenddftf2.c (__extenddftf2): Use FP_INIT_EXCEPTIONS
	instead of FP_INIT_ROUNDMODE.
	* soft-fp/extendsfdf2.c (__extendsfdf2): Likewise.
	* soft-fp/extendsftf2.c (__extendsftf2): Likewise.

	[BZ #16034]
	* soft-fp/op-common.h (_FP_NEG): Document input as raw.  Do not
	copy class of input value.
	* soft-fp/negdf2.c (__negdf2): Use raw unpacking and packing.  Do
	not handle exceptions.
	* soft-fp/negsf2.c (__negsf2): Likewise.
	* soft-fp/negtf2.c (__negtf2): Likewise.
	* sysdeps/sparc/sparc32/soft-fp/q_neg.c (_Q_neg): Likewise.

2013-10-09  Joseph Myers  <joseph@codesourcery.com>

	* soft-fp/op-4.h (_FP_FRAC_DISASSEMBLE_4): Remove trailing
	semicolon.  From Linux kernel.

2013-10-09  Adam Buchbinder  <adam.buchbinder@gmail.com>

	* soft-fp/op-common.h (_FP_UNPACK_CANONICAL): Fix typo in comment.

2013-10-08  Yogesh Chaudhari  <mr.yogesh@gmail.com>

	[BZ #156]
	* manual/socket.texi: Added statement about buffer
	for gethostbyname2_r.

2013-10-08  Ondřej Bílka  <neleai@seznam.cz>

	* sysdeps/x86_64/memset.S (ALIGN): Macro removed.
	Use .p2align directive instead, throughout.
	* sysdeps/x86_64/multiarch/memcmp-sse4.S: Likewise.
	* sysdeps/x86_64/multiarch/memcmp-ssse3.S: Likewise.
	* sysdeps/x86_64/multiarch/memcpy-sse2-unaligned.S: Likewise.
	* sysdeps/x86_64/multiarch/memcpy-ssse3-back.S: Likewise.
	* sysdeps/x86_64/multiarch/memcpy-ssse3.S: Likewise.
	* sysdeps/x86_64/multiarch/strcmp-sse2-unaligned.S: Likewise.
	* sysdeps/x86_64/strchr.S: Likewise.
	* sysdeps/x86_64/strrchr.S: Likewise.

2013-10-08  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* sysdeps/ieee754/dbl-64/e_pow.c: Fix code formatting.

	* sysdeps/ieee754/dbl-64/e_exp.c: Fix code formatting.

	* sysdeps/generic/math_private.h (__mpsin1): Remove
	declaration.
	(__mpcos1): Likewise.
	(__mpsin): New argument __range_reduce.
	(__mpcos): Likewise.
	* sysdeps/ieee754/dbl-64/s_sin.c: Likewise.