@@ -1,3 +1,8 @@
+2013-10-10  Torvald Riegel  <triegel@redhat.com>
+
+	* scripts/bench.pl: Add include-sources directive.
+	* benchtests/README: Update documentation.
+
 2013-10-10  Joseph Myers  <joseph@codesourcery.com>
 
 	* soft-fp/soft-fp.h (FP_INIT_EXCEPTIONS): New macro.
